tests/compiler_directive/error.out
error: error.li 2,3: unknown compiler directive `#unknown`
    2 |   # unknown unknwown directive
      |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: error.li 4,3: unknown compiler directive `#endunknwon`
    4 |   # endunknwon
      |   ^^^^^^^^^^^^
