tests/compiler_directive/error.li
fn unknown() {
  # unknown unknwown directive
  var n = 10
  # endunknwon
}
